Fix the sparkle and circle position on Explore tab on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.4.6 */
+   1.4.7rc1 */
 
 /* CSS variables */
 :root {
@@ -3561,14 +3561,14 @@ body.embed .entry .detailed-status {
   /* Sparkle offset on numbered item */
   .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.star-icon.activate.star-icon::after {
     /* stylelint-disable-next-line */
-    left: calc(50% - 13px) !important;
+    left: calc(50% - 11px) !important;
   }
 
   /* Circle offset on numbered item */
   .layout-single-column .detailed-status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before,
   .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before {
     /* stylelint-disable-next-line */
-    left: calc(50% - 13px) !important;
+    left: calc(50% - 11px) !important;
   }
 }
 
